test/chainsaw/securityconfig/opa_pre_request_policy/endpointslice-ready.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: app
endpoints:
  - conditions:
      ready: true
