test/chainsaw/securityconfig/opa_pre_request_policy/envoyfilter-failure-mode-allow-false.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  labels:
    accesserator.kartverket.no/controller: securityconfig
    app.kubernetes.io/managed-by: accesserator
  name: security-config-opa-1b65d437
spec:
  configPatches:
    - applyTo: CLUSTER
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          connect_timeout: 1s
          load_assignment:
            cluster_name: opa_ext_authz
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 9191
          name: opa_ext_authz
          type: STRICT_DNS
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ext_authz
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            failure_mode_allow: false
            failure_mode_allow_header_add: true
            grpc_service:
              envoy_grpc:
                cluster_name: opa_ext_authz
              timeout: 1s
            transport_api_version: V3
            with_request_body:
              allow_partial_message: true
              max_request_bytes: 8192
  priority: 1000
  workloadSelector:
    labels:
      application.skiperator.no/app-name: app
