test/chainsaw/securityconfig/opa_pre_request_policy/httproute-ready.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
status:
  parents:
    - conditions:
        - type: Accepted
          status: "True"
        - type: ResolvedRefs
          status: "True"
