test/chainsaw/securityconfig/opa_pre_request_policy/pod-with-pre-request-disabled.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: app
spec:
  initContainers:
    - name: istio-init
    - name: istio-proxy
    - name: opa
      args:
        - run
        - --server
        - --addr=0.0.0.0:3010
        - --bundle
        - /bundles/opa-common-self-auth
        - --bundle
        - /bundles/test-bundle
        - --watch
        - --authorization=basic
      ports:
      - containerPort: 3010
        name: http
        protocol: TCP
status:
  containerStatuses:
    - name: app
      ready: true
  initContainerStatuses:
    - name: istio-init
      ready: true
    - name: istio-proxy
      ready: true
    - name: opa
      ready: true
  phase: Running
