test/chainsaw/securityconfig/opa_pre_request_policy/pod-with-pre-request-enabled.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: app
spec:
  initContainers:
    - name: istio-init
    - name: istio-proxy
    - name: opa
      args:
        - run
        - --server
        - --addr=0.0.0.0:3010
        - --bundle
        - /bundles/opa-common-self-auth
        - --bundle
        - /bundles/test-bundle
        - --watch
        - --authorization=basic
        - --set=plugins.envoy_ext_authz_grpc.addr=:9191
        - --set=plugins.envoy_ext_authz_grpc.path=request/authz/allow
        - --set=plugins.envoy_ext_authz_grpc.dry-run=false
      ports:
        - containerPort: 3010
          name: http
          protocol: TCP
        - containerPort: 9191
          name: grpc
          protocol: TCP
status:
  containerStatuses:
    - name: app
      ready: true
  initContainerStatuses:
    - name: istio-init
      ready: true
    - name: istio-proxy
      ready: true
    - name: opa
      ready: true
  phase: Running
