test/chainsaw/securityconfig/opa_pre_request_policy/securityconfig.yaml
apiVersion: accesserator.kartverket.no/v1alpha
kind: SecurityConfig
metadata:
  name: security-config
spec:
  opa:
    enabled: true
    bundleUrls:
      # The following policy will deny requests to /api/admin and enrich requests with x-touched-by-opa: true
      - name: test-bundle
        url: ghcr.io/kartverket/accesserator/opa-bundle@sha256:1c4a63425c0668e647df11d372ded80207c7fda35809851b7e9ec027cfd0b798
    requestPolicy:
      enabled: false
      endpoint: /v1/data/request/authz/allow
  applicationRef: app
